# terminal_pw_manager

./: .gitignore  Cargo.toml  config.toml
src/: main.rs
